--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 Flask==0.10.1
-Flask-Bcrypt==0.5.2
 Flask-Login==0.2.10
+Flask-Mail==0.9.0
+Flask-Principal==0.4.0
+Flask-Security==1.7.1
 Flask-WTF==0.9.4
 Jinja2==2.7.2
 MarkupSafe==0.19
 WTForms==1.0.5
 Werkzeug==0.9.4
+blinker==1.3
 flask-mongoengine==0.7.0
 itsdangerous==0.23
 mongoengine==0.8.7
+passlib==1.6.2
 py-bcrypt==0.4
 pymongo==2.6.3
