--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ WTForms==1.0.5
 Werkzeug==0.9.4
 blinker==1.3
 flask-mongoengine==0.7.0
+gunicorn==18.0
 itsdangerous==0.23
 mongoengine==0.8.7
 passlib==1.6.2
