--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==0.10.1
 Flask-Login==0.2.10
 Flask-Mail==0.9.0
 Flask-Principal==0.4.0
-Flask-Security==1.7.1
+git+git://github.com/jonathongrigg/flask-security@develop
 Flask-WTF==0.9.4
 Jinja2==2.7.2
 MarkupSafe==0.19
