--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ flask-mongoengine==0.7.0
 gunicorn==18.0
 itsdangerous==0.23
 mongoengine==0.8.7
+newrelic==2.18.1.15
 passlib==1.6.2
 py-bcrypt==0.4
 pymongo==2.6.3
